--- a/LMSGroupOne/LMSGroupOne.csproj
+++ b/LMSGroupOne/LMSGroupOne.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LMS.Core\LMS.Core.csproj" />
+    <ProjectReference Include="..\LMS.Data\LMS.Data.csproj" />
   </ItemGroup>
 
 </Project>
