--- a/LMS.Api/LMS.Api.csproj
+++ b/LMS.Api/LMS.Api.csproj
@@ -14,4 +14,9 @@
 
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\Dtos\" />
+    <Folder Include="Core\Repositories\" />
+  </ItemGroup>
+
 </Project>
