--- a/LMS.Api/appsettings.json
+++ b/LMS.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LMSApiContext": "Server=(localdb)\\mssqllocaldb;Database=LMSApiLibraryDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
