--- a/LMS.Api/LMS.Api.csproj
+++ b/LMS.Api/LMS.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -20,7 +20,6 @@
 
   <ItemGroup>
     <Folder Include="Core\Dtos\" />
-    <Folder Include="Core\Repositories\" />
   </ItemGroup>
 
 </Project>
