--- a/LMS.Core/LMS.Core.csproj
+++ b/LMS.Core/LMS.Core.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\ViewModels\Account\" />
+  </ItemGroup>
+
 </Project>
