--- a/LMSGroupOne/LMSGroupOne.csproj
+++ b/LMSGroupOne/LMSGroupOne.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="documents\" />
     <Folder Include="wwwroot\documents\" />
   </ItemGroup>
 
